--- a/posts/Python/global_variables.ipynb
+++ b/posts/Python/global_variables.ipynb
@@ -182,11 +182,126 @@
    "id": "db72a84f",
    "metadata": {},
    "source": [
-    "Modules: Each module has its own (global) scope. I guess there isn't much to say about it.\n",
+    "### Modules\n",
+    "Each module has its own (global) scope. If you call one module from another, the called module does NOT see variables in the calling module.\n",
     "\n",
-    "Functions: Functions are the most important constructs that create new scopes. This includes class functions (functions defined in a class body). Instance methods also create new scopes, because they are just class functions to which instances are automatically passed as the first argument.\n",
+    "Let's look at an example. The module `a.py` defines a function `f` which prints the variable `x`. But the variable `x` isn't defined anywhere in the module `a.py`.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3ff20f84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a new module a.py in the current working directory and populating it with code\n",
+    "import os\n",
     "\n",
-    "Comprehensions and generator expressions: They do create new scopes, but a bit unusual ones, because they of course immediatelly disappear once the expressions finish. I mean, this is actually not unusual at all, function scopes also immediatelly dissapear once the functions finish. But you get the point. Scopes of comprehensions and generator expressions are just not very interesting."
+    "code = \"\"\"\n",
+    "def f():\n",
+    "    print(x)\n",
+    "\"\"\"\n",
+    "\n",
+    "with open(\"a.py\", \"w\") as f:\n",
+    "    f.write(code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3338449",
+   "metadata": {},
+   "source": [
+    "Here the module `a.py` defines a function `f` that prints the variable `x`. But the variable `x` isn't defined anywhere in the module `a.py`. When the function is called (doesn't matter from where), Python first looks for `x` locally in `f`, then in the global scope of `a.py` and finally in the built-in scope. It is not found so a NameError is thrown. The global scope of the calling module is never searched."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c21d9546",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import a\n",
+    "\n",
+    "x = 1\n",
+    "a.f()  # NameError: name 'x' is not defined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fb1a8a9",
+   "metadata": {},
+   "source": [
+    "But there is a way to make the function work. We can *create* the variable `x` in the module `a.py` from the calling module. The body of a function is, as usual, only evaluated when the function is called. And when the function `a.f` is called, the module `a` already has an attribute (or variable) `x` defined."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6308e66e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import a\n",
+    "\n",
+    "a.x = 1\n",
+    "a.f()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3aa60d33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.remove('a.py')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59c9bb67",
+   "metadata": {},
+   "source": [
+    "### Functions\n",
+    "\n",
+    "Functions are the most important constructs that create new scopes. This includes all possible versions of functions:\n",
+    "\n",
+    "- usual functions (keyword `def`)\n",
+    "- class functions (usual functions defined in a class body)\n",
+    "- instance methods (they are just class functions to which instances are automatically passed in as the first argument)\n",
+    "- lambda expressions (which are just annonymous functions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2041895",
+   "metadata": {},
+   "source": [
+    "### Comprehensions and generator expressions\n",
+    "They also create new scopes, just as functions do. Variables defined in them are only visible from inside of the comprehensions/generator expression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be1c39e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = [i**2 for i in range(3)]\n",
+    "print(i)  # NameError: name 'i' is not defined"
    ]
   },
   {
@@ -204,14 +319,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b0f44b1",
+   "cell_type": "markdown",
+   "id": "69ba5438",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "L = [i**2 for i in range(3)]\n",
-    "print(i)  # NameError: name 'i' is not defined"
+    "One may think that scopes of comprehensions and generator expressions are not very interesting, since they immediatelly dissappear once the expressions are finished. But that is not true, they don't disappear. The point of evaluation just moves back to the scope where they are created. But the inner scope still exists. We can still index into e.g. the list comprehension and access its scope. Yes, this is mostly unimportant, but it becomes important when the list elements are functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "88b3c283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 2 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = [(lambda: i) for i in range(3)]\n",
+    "print(L[0](), L[1](), L[2]())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12fe9cf1",
+   "metadata": {},
+   "source": [
+    "Here, the list comprehension defines an iterative variable `i` that goes from 0 to 2, and for each value of `i` it creates an element of the list that is the function `lambda: i`. Meaning it is a function that returns the value of a variable `i`. But that variable is not the function's parameter nor is it defined anywhere in the function.\n",
+    "\n",
+    "So the functions are defined, the list is created, but the functions are not evaluated untill called (that is the usual behavior of any Python function). Then, when the list is accessed and the functions are called, their bodies are evaluated. For each function, the variable `i` needs to be found. Python first looks into the function locally, but doesn't find the variable `i`. So Python then searches the enclosing scope, which is the list comprehension's scope. And in that scope, the variable `i` exists and is now bound to the value 2. So that value is returned from each function in the list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08973b33",
+   "metadata": {},
+   "source": [
+    "To make the individual functions behave in the way that each returns a different value of `i` (the behavior one may have wanted in the first place), we need each function to accept one variable and define its default value. Python evaluates default values at function definition time - NOT when the function is called (only the body is evaluated when function is called). So, this code returns three different values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bc6caa63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = [(lambda i=i: i) for i in range(3)]\n",
+    "print(L[0](), L[1](), L[2]())"
    ]
   },
   {
@@ -219,7 +387,8 @@
    "id": "7088740b",
    "metadata": {},
    "source": [
-    "Special case: `except as`: Let's look at this code:"
+    "### Special case: `except as`\n",
+    "Let's look at this code:"
    ]
   },
   {
@@ -1109,14 +1278,6 @@
     "print('inside global scope')\n",
     "C().f()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c82d681",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
