class functions and instance methods differentiated in examples

--- a/posts/Python/global_variables.ipynb
+++ b/posts/Python/global_variables.ipynb
@@ -290,7 +290,7 @@
    "metadata": {},
    "source": [
     "### Comprehensions and generator expressions\n",
-    "They also create new scopes, just as functions do. Variables defined in them are only visible from inside of the comprehensions/generator expression."
+    "They also create new scopes, just as functions do. Variables defined in them are only visible from inside of the comprehension/generator expression."
    ]
   },
   {
@@ -378,7 +378,7 @@
     }
    ],
    "source": [
-    "L = [(lambda i=i: i) for i in range(3)]\n",
+    "L = [(lambda x=i: x) for i in range(3)]\n",
     "print(L[0](), L[1](), L[2]())"
    ]
   },
@@ -894,11 +894,13 @@
     "## Classes and Scoping\n",
     "This is the most difficult part of the topic. Classes differ substantially from functions in terms of scoping.\n",
     "\n",
-    "The first thing to know is that scopes of class bodies do not extend to class functions, not even to comprehensions and generator expressions used in class bodies. As a result, class bodies are NOT enclosing scopes for class functions (or instance methods). Also, scopes of class bodies disappear after the class is defined. Names defined in a class body are moved to the attribute dictionary of the class (`__dict__`) after the class is finished defining, but the scope itself disappears. As a result, the scope enclosing class functions (and thus instance methods) is the scope in which the class is defined.\n",
+    "The first thing to know is that scopes of class bodies do not extend to class functions, not even to comprehensions and generator expressions used in class bodies. As a result, class bodies are NOT enclosing scopes for class functions. Also, scopes of class bodies disappear after the class is defined. Names defined in a class body are moved to the attribute dictionary of the class (`__dict__`) after the class is finished defining, but the scope itself disappears. As a result, the scope enclosing class functions is the scope in which the class is defined.\n",
     "\n",
     "Second important thing is that code in class bodies, unlike code in functions bodies, is evaluated immediately at the class definition time. I mean, code inside a function isn't run until the function is called. But code inside a class body is evaluated immediately as the class is being defined.\n",
     "\n",
-    "Most of the class scoping behavior is determined by these two facts. Let's look at some examples."
+    "Third, class instances do not create new scopes either. They just create namespaces. But these namespaces do not participate in the LEGB name resolution rules. Thus, the scope enclosing instance methods is still the scope in which the class is defined.\n",
+    "\n",
+    "Most of the class scoping behavior is determined by these facts. Let's look at some examples."
    ]
   },
   {
@@ -967,11 +969,56 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67859f8d",
+   "id": "06f282bc",
    "metadata": {},
    "source": [
     "### Example 2\n",
-    "A class body is not an enclosing LEGB scope for class functions (and instance methods). When a method is evoked on a class instance, and that method uses a variable, Python searches for that variable like this: First locally in the method, of course, and then it goes look inside the scope in which the class was defined. It completely skips the body of the class, because it is not the enclosing scope. (It also skips the scope from which the method is invoked, but we have seen this exact behavior for functions, this is just a reminder.)"
+    "As a direct implication of the first example (class bodies being evaluated immediately), we cannot reference variables defined after the class definition. Functions on the other hand can do exactly that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62bbf116",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f():\n",
+    "    return x\n",
+    "\n",
+    "x = 1\n",
+    "print(f())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "712fcdc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class C:\n",
+    "    y = x  # NameError: name 'x' is not defined\n",
+    "    pass\n",
+    "\n",
+    "x = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67859f8d",
+   "metadata": {},
+   "source": [
+    "### Example 3\n",
+    "A class body is not an enclosing LEGB scope for class functions. When a class method is called, and that function uses a variable, Python searches for that variable like this: First locally in the function, of course, and then it goes look inside the scope in which the class was defined. It completely skips the body of the class, because it is not the enclosing scope. (It also skips the scope from which the function is called, but we have seen this exact behavior for functions, this is just a reminder.)"
    ]
   },
   {
@@ -995,13 +1042,13 @@
     "\n",
     "class C:\n",
     "    x = 2\n",
-    "    def f(self):\n",
+    "    def f():\n",
     "        return x\n",
     "\n",
     "def fn():\n",
     "    x = 3\n",
-    "    print(C().f())\n",
-    "    print(C().x)\n",
+    "    print(C.f())\n",
+    "    print(C.x)\n",
     "    print(x)\n",
     "\n",
     "fn()"
@@ -1017,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2a297925",
    "metadata": {},
    "outputs": [
@@ -1082,47 +1129,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c998498",
+   "id": "0e8313f8",
    "metadata": {},
    "source": [
-    "### Example 3\n",
-    "As a direct implication of the first example (class bodies being evaluated immediately), we cannot reference variables defined after the class definition. Functions on the other hand can do exactly that."
+    "### Example 4\n",
+    "The enclosing scope for instance methods is still the scope in which the class is defined. Instances do not create new scopes. They create namespaces (different from class namespaces), but these are not scopes. They are not searched when a name is looked for. And the class body is not searched either."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c4562c4b",
+   "id": "7c564f86",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "c.x   is 2\n",
+      "c.f() is 1\n",
+      "c.x = 3\n",
+      "c.x   is 3\n",
+      "C.x   is 2\n",
+      "c.f() is 1\n"
      ]
     }
    ],
    "source": [
-    "def f():\n",
-    "    return x\n",
-    "\n",
     "x = 1\n",
-    "print(f())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4b8b199",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class C:\n",
-    "    y = x  # NameError: name 'x' is not defined\n",
-    "    pass\n",
     "\n",
-    "x = 1"
+    "class C:\n",
+    "    x = 2\n",
+    "    def f(self):\n",
+    "        return x\n",
+    "\n",
+    "c = C()\n",
+    "print('c.x   is', c.x)\n",
+    "print('c.f() is', c.f())\n",
+    "c.x = 3\n",
+    "print('c.x = 3')\n",
+    "print('c.x   is', c.x)\n",
+    "print('C.x   is', C.x)\n",
+    "print('c.f() is', c.f())\n"
    ]
   },
   {
@@ -1130,7 +1178,7 @@
    "id": "0dc61968",
    "metadata": {},
    "source": [
-    "### Example 4\n",
+    "### Example 5\n",
     "Though the scope of a class body disappears after the class is defined, until then it is still a normal scope. In particular, it does have access to all enclosing scopes. It also creates a new namespace (that later becomes the class's `__dict__` attribute). But if we we want to reference variables defined in a class body from outside of the class body, we must access it via the class name. Btw \"outside of the class body\" includes class functions, because as we have seen class body is not the enclosing scope for class functions."
    ]
   },
@@ -1169,7 +1217,7 @@
    "id": "5fe26d65",
    "metadata": {},
    "source": [
-    "We can even use `nonlocal` in the class body to reference a variable defined in the enclosing scope (but as we have seen if we use `nonlocal`, the variable cannot be global, se we need to nest the class inside a function)."
+    "We can even use `nonlocal` in the class body to reference a variable defined in the enclosing scope. (As we have seen if we use `nonlocal`, the variable cannot be global, so we need to nest the class inside a function)."
    ]
   },
   {
@@ -1238,12 +1286,12 @@
    "id": "ffee449c",
    "metadata": {},
    "source": [
-    "### Example 5\n",
+    "### Example 6\n",
     "A nice summarizing example. Here we can see that:\n",
     "\n",
     "- Code in class body is evaluated at class definition time.\n",
     "- Class functions are defined at class definition time, but their code is not run until they are envoked.\n",
-    "- Class body is not an enclosing scope for class functions.\n",
+    "- Class body is not the enclosing scope for class functions (instance methods)\n",
     "- We can reference class variables only via the class name."
    ]
   },
