--- a/posts/Python/global_variables.ipynb
+++ b/posts/Python/global_variables.ipynb
@@ -898,7 +898,7 @@
     "\n",
     "Second important thing is that code in class bodies, unlike code in functions bodies, is evaluated immediately at the class definition time. I mean, code inside a function isn't run until the function is called. But code inside a class body is evaluated immediately as the class is being defined.\n",
     "\n",
-    "Third, class instances do not create new scopes either. They just create namespaces. But these namespaces do not participate in the LEGB name resolution rules. Thus, the scope enclosing instance methods is still the scope in which the class is defined.\n",
+    "Third, class instances do not create new scopes either. They just create namespaces. But these namespaces do not participate in the LEGB name resolution rules. Thus, the scope enclosing instance methods is still the scope in which the class is defined. For instance attribute lookups, first the instance namespace is searched. Then the class namespace is searched.\n",
     "\n",
     "Most of the class scoping behavior is determined by these facts. Let's look at some examples."
    ]
@@ -972,8 +972,7 @@
    "id": "06f282bc",
    "metadata": {},
    "source": [
-    "### Example 2\n",
-    "As a direct implication of the first example (class bodies being evaluated immediately), we cannot reference variables defined after the class definition. Functions on the other hand can do exactly that."
+    "As a direct implication of this, we cannot reference variables defined after the class definition. Functions on the other hand can do exactly that."
    ]
   },
   {
@@ -1017,8 +1016,8 @@
    "id": "67859f8d",
    "metadata": {},
    "source": [
-    "### Example 3\n",
-    "A class body is not an enclosing LEGB scope for class functions. When a class method is called, and that function uses a variable, Python searches for that variable like this: First locally in the function, of course, and then it goes look inside the scope in which the class was defined. It completely skips the body of the class, because it is not the enclosing scope. (It also skips the scope from which the function is called, but we have seen this exact behavior for functions, this is just a reminder.)"
+    "### Example 2\n",
+    "A class body is not an enclosing LEGB scope for class functions. When a class function is called, and that function uses a variable, Python searches for that variable like this: First locally in the function, of course, and then it goes look inside the scope in which the class was defined. It completely skips the body of the class, because it is not the enclosing scope. (It also skips the scope from which the function is called, but we have seen this exact behavior for functions, this is just a reminder.)"
    ]
   },
   {
@@ -1132,13 +1131,15 @@
    "id": "0e8313f8",
    "metadata": {},
    "source": [
-    "### Example 4\n",
-    "The enclosing scope for instance methods is still the scope in which the class is defined. Instances do not create new scopes. They create namespaces (different from class namespaces), but these are not scopes. They are not searched when a name is looked for. And the class body is not searched either."
+    "### Example 3\n",
+    "For instance methods, the situation is the very same as for class functions: The enclosing scope for instance methods is still the scope in which the class is defined. Instances do not create new scopes. They create namespaces (different from class namespaces), but these are not scopes. They are not searched when a name is referenced in a method. And the class body is not searched either. So again, if a name is referenced in a method, first the local scope of the method is searched, then the scope in which the class is defined.\n",
+    "\n",
+    "For instance attribute lookups, first the instance namespace is searched, then the class namespace."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7c564f86",
    "metadata": {},
    "outputs": [
@@ -1164,9 +1165,9 @@
     "        return x\n",
     "\n",
     "c = C()\n",
-    "print('c.x   is', c.x)\n",
+    "print('c.x   is', c.x)  # instance c doesn't define x, so the class's x is used here\n",
     "print('c.f() is', c.f())\n",
-    "c.x = 3\n",
+    "c.x = 3  # now the instance c does define x, which is prioritized before the class's\n",
     "print('c.x = 3')\n",
     "print('c.x   is', c.x)\n",
     "print('C.x   is', C.x)\n",
@@ -1178,8 +1179,8 @@
    "id": "0dc61968",
    "metadata": {},
    "source": [
-    "### Example 5\n",
-    "Though the scope of a class body disappears after the class is defined, until then it is still a normal scope. In particular, it does have access to all enclosing scopes. It also creates a new namespace (that later becomes the class's `__dict__` attribute). But if we we want to reference variables defined in a class body from outside of the class body, we must access it via the class name. Btw \"outside of the class body\" includes class functions, because as we have seen class body is not the enclosing scope for class functions."
+    "### Example 4\n",
+    "Though the scope of a class body disappears after the class is defined, until then it is still a normal scope. In particular, it does have access to all its enclosing scopes. It also creates a new namespace (that later becomes the class's `__dict__` attribute). But if we we want to reference variables defined in a class body from outside of the class body, we must access it via the class name. Btw \"outside of the class body\" includes class functions/instance methods, because as we have seen class body is not the enclosing scope for class functions/instance methods."
    ]
   },
   {
@@ -1286,7 +1287,7 @@
    "id": "ffee449c",
    "metadata": {},
    "source": [
-    "### Example 6\n",
+    "### Example 5\n",
     "A nice summarizing example. Here we can see that:\n",
     "\n",
     "- Code in class body is evaluated at class definition time.\n",
