Classes text improved

--- a/posts/Python/global_variables.ipynb
+++ b/posts/Python/global_variables.ipynb
@@ -894,13 +894,17 @@
     "## Classes and Scoping\n",
     "This is the most difficult part of the topic. Classes differ substantially from functions in terms of scoping.\n",
     "\n",
-    "The first thing to know is that scopes of class bodies do not extend to class functions, not even to comprehensions and generator expressions used in class bodies. As a result, class bodies are NOT enclosing scopes for class functions. Also, scopes of class bodies disappear after the class is defined. Names defined in a class body are moved to the attribute dictionary of the class (`__dict__`) after the class is finished defining, but the scope itself disappears. As a result, the scope enclosing class functions is the scope in which the class is defined.\n",
+    "The first thing to know is that code in class bodies, unlike code in functions bodies, is evaluated immediately at the class definition time. I mean, code inside a function isn't run until the function is called. But code inside a class body is evaluated immediately as the class is being defined\n",
     "\n",
-    "Second important thing is that code in class bodies, unlike code in functions bodies, is evaluated immediately at the class definition time. I mean, code inside a function isn't run until the function is called. But code inside a class body is evaluated immediately as the class is being defined.\n",
+    "Second and probably the most important thing is that scopes of class bodies do not extend to class functions, not even to comprehensions and generator expressions used in class bodies. As a result, class bodies are NOT enclosing scopes for class functions. Also, scopes of class bodies disappear after the class is defined. Names defined in a class body are moved to the attribute dictionary of the class (`__dict__`) after the class is finished defining, but the scope itself disappears. As a result, the scope enclosing class functions is the scope in which the class is defined.\n",
     "\n",
-    "Third, class instances do not create new scopes either. They just create namespaces. But these namespaces do not participate in the LEGB name resolution rules. Thus, the scope enclosing instance methods is still the scope in which the class is defined. For instance attribute lookups, first the instance namespace is searched. Then the class namespace is searched.\n",
+    "Third, class instances do not create new scopes either. They just create namespaces. But these namespaces do not participate in the LEGB name resolution rules. Thus, the scope enclosing instance methods is still the scope in which the class is defined.\n",
     "\n",
-    "Most of the class scoping behavior is determined by these facts. Let's look at some examples."
+    "Most of the class scoping behavior is determined by these facts.\n",
+    "\n",
+    "And just for completeness: Instance attribute lookup is a completely different process than name resolutions in functions and methods. Attribute access follows completely different rules than LEGB. For instance attribute lookups, first the instance namespace is searched. Then the class namespace is searched. Then there is MRO, descriptor handling, \\_\\_getattribute__ fallback etc. But that is a topic for a future post.\n",
+    "\n",
+    "Let's look at some examples of scoping in classes."
    ]
   },
   {
