Example 1 text improved

--- a/posts/Python/global_variables.ipynb
+++ b/posts/Python/global_variables.ipynb
@@ -913,7 +913,7 @@
    "metadata": {},
    "source": [
     "### Example 1\n",
-    "Class body executes immediately, top to bottom. Unlike functions, which execute only after they are called. But class functions behave again the usual way - not evaluated until called."
+    "Class body executes immediately, top to bottom. Unlike functions, which execute only after they are called."
    ]
   },
   {
