--- a/posts/Python/classes.ipynb
+++ b/posts/Python/classes.ipynb
@@ -5,13 +5,25 @@
    "id": "9358982f",
    "metadata": {},
    "source": [
+    "## TODO\n",
     "- private variables\n",
-    "- Method resolution order (also for multiple inheritance like class Third(First, Second), see below)\n",
+    "- descriptors\n",
+    "- method resolution order (also for multiple inheritance like class Third(First, Second), see below)\n",
     "- getattr, hasattr, isinstance, vars, \\_\\_dict\\_\\_, \\_\\_get\\_\\_, \\_\\_set\\_\\_, \\_\\_getattr\\_\\_, \\_\\_getattribute\\_\\_, and others\n",
     "- staticmethod, classmethod, dataclass\n",
     "- \"Classes support two kinds of operations: attribute references and instantiation.\"\n",
     "- But instances only understand attribute references; two kinds: data atributes and methods\n",
-    "- https://docs.python.org/3.11/tutorial/classes.html"
+    "- https://docs.python.org/3.11/tutorial/classes.html\n",
+    "- \"Clients should use data attributes (of class instances, pozn. redakce) with care - clients may mess up invariants maintained by the methods by stamping on their data attributes.\"\n",
+    "- \"Any function object that is a class attribute defines a method for instances of that class.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e3f0433",
+   "metadata": {},
+   "source": [
+    "## Function vs method"
    ]
   },
   {
@@ -65,7 +77,7 @@
    "id": "803ed900",
    "metadata": {},
    "source": [
-    "MRO"
+    "## MRO"
    ]
   },
   {
@@ -120,7 +132,7 @@
    "id": "ac74947a",
    "metadata": {},
    "source": [
-    "Private vars:"
+    "## Private vars"
    ]
   },
   {
