Functions vs. methods improved

--- a/posts/Python/classes.ipynb
+++ b/posts/Python/classes.ipynb
@@ -23,7 +23,7 @@
    "id": "1e3f0433",
    "metadata": {},
    "source": [
-    "## Function vs method"
+    "## Functions vs. methods"
    ]
   },
   {
@@ -49,16 +49,16 @@
     "    def f(self):\n",
     "        print('inside f')\n",
     "\n",
-    "c = C()\n",
-    "\n",
     "def g():\n",
     "    print('inside g')\n",
     "\n",
+    "c = C()\n",
     "c.g = g\n",
     "\n",
     "c.f()\n",
     "c.g()\n",
     "C.f(_)\n",
+    "# C.g()  # AttributeError: type object 'C' has no attribute 'g'\n",
     "\n",
     "print(type(c.f))\n",
     "print(type(c.g))"
@@ -69,7 +69,34 @@
    "id": "5ec7a6bf",
    "metadata": {},
    "source": [
-    "So methods are probably only created in a class definition."
+    "So methods are probably only created in a class definition? NO! They can be created after the class has been created. They just have to be associated with the class, not with the instance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b5c48b45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'method'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class C:\n",
+    "    pass\n",
+    "\n",
+    "def f(x):\n",
+    "    print(\"hello\")\n",
+    "\n",
+    "c = C()\n",
+    "# print(type(c.f))  # AttributeError: 'C' object has no attribute 'f'\n",
+    "C.f = f\n",
+    "print(type(c.f))"
    ]
   },
   {
