First attempt of edges

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -15,12 +15,239 @@
    "cell_type": "markdown",
    "id": "14d2b312",
    "metadata": {},
+   "source": [
+    "This post implements (and improves) code in chapter 14 from the textbook Introduction to Computation and Programming Using Python, With Application to Computational Modeling and Understanding Data, third edition, by John V. Guttag, 2020. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "87a20123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    \"\"\"Basic node to be used in graphs.\"\"\"\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        \"\"\"Assumes name is a string.\"\"\"\n",
+    "        self._name = name\n",
+    "\n",
+    "    def get_name(self):\n",
+    "        \"\"\"Returns node name.\"\"\"\n",
+    "        return self._name\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        \"\"\"Represents node by its name.\"\"\"\n",
+    "        return self._name\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        \"\"\"Two nodes are equal if their names are equal.\"\"\"\n",
+    "        return self._name == other._name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41cc8296",
+   "metadata": {},
+   "source": [
+    "I decided to implement edges as two different classes that don't inherit from each other, because I think one isn't a special case of another. I mean, perhaps it is, but methods on both will differ so substantially, that it doesn't make sense to me to have them be connected. This is because of the substitution principle: A code that works on a superclass must work on a subclass. But if a code works on bidirectional edges (perhaps exploiting symmetry) it may not work on unidirectional edges (where the symmetry doesn't exist). So, if anything, bidirectional edge must inherit from unidirectional edge. But that doesn't work either, because unidirectional edge logically must have the methods get_source and get_destination, but bidirectional edge cannot have these methods. bidirectional edges don't have sources or destination because both nodes could work as such. And which node should be returned by a bidirectional edge's get_source method? There is no clear answer, so I conclude both types of edges cannot inherit from each other in any way. The only solution would be to completely discard bidirectional edges and only work with directional ones - after all, we can build undirected graph with directed edges - but that would prevent me from having this fun :). Unfortunately, a lot of code is then duplicated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17a258a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Edge:\n",
+    "    \"\"\"Basic unweighted bidirectional edge.\"\"\"\n",
+    "\n",
+    "    def __init__(self, node1, node2):\n",
+    "        \"\"\"Assumes node1 and node2 are Nodes.\"\"\"\n",
+    "        self._node1 = node1\n",
+    "        self._node2 = node2\n",
+    "\n",
+    "    def get_nodes(self):\n",
+    "        \"\"\"Returns both nodes as a tuple.\"\"\"\n",
+    "        return self._node1, self._node2\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        \"\"\"Textual representation of the edge.\"\"\"\n",
+    "        node1, node2 = self.get_nodes()\n",
+    "        return f\"{node1.get_name()} <----> {node2.get_name()}\"\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        \"\"\"Two Edges are equal if they have the same nodes (order doesn't matter).\"\"\"\n",
+    "        return set(self.get_nodes()) == set(other.get_nodes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a8e0e6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class WeightedEdge(Edge):\n",
+    "    \"\"\"Weighted bidirectional edge.\"\"\"\n",
+    "\n",
+    "    def __init__(self, node1, node2, weight=1):\n",
+    "        \"Assumes node1 and node2 are Nodes.\"\n",
+    "        super().__init__(node1, node2)\n",
+    "        self._weight = weight\n",
+    "\n",
+    "    def get_weight(self):\n",
+    "        \"\"\"Returns weight of the edge.\"\"\"\n",
+    "        return self._weight\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        node1, node2 = self.get_nodes()\n",
+    "        return f\"{node1.get_name()} <--({self.get_weight()})--> {node2.get_name()}\"\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        weights_equal = self.get_weight() == other.get_weight()\n",
+    "        return super().__eq__(other) and weights_equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3119ca9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DirectedEdge:\n",
+    "    \"\"\"Basic unweighted unidirectional edge.\"\"\"\n",
+    "\n",
+    "    def __init__(self, src, dest):\n",
+    "        \"\"\"Assumes src and dest are Nodes.\"\"\"\n",
+    "        self._src = src\n",
+    "        self._dest = dest\n",
+    "\n",
+    "    def get_src(self):\n",
+    "        \"\"\"Returns src.\"\"\"\n",
+    "        return self._src\n",
+    "\n",
+    "    def get_dest(self):\n",
+    "        \"\"\"Returns dest.\"\"\"\n",
+    "        return self._dest\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        \"\"\"Textual representation of the edge.\"\"\"\n",
+    "        return f\"{self._src.get_name()} ----> {self._dest.get_name()}\"\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        \"\"\"Two Edges are equal if both source and destinations are the same.\"\"\"\n",
+    "        sources_equal = self.get_src() == other.get_src()\n",
+    "        destinations_equal = self.get_dest() == other.get_dest()\n",
+    "        return sources_equal and destinations_equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "433b49e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class WeightedDirectedEdge(DirectedEdge):\n",
+    "    \"\"\"Weighted unidirectional edge.\"\"\"\n",
+    "\n",
+    "    def __init__(self, src, dest, weight=1):\n",
+    "        \"\"\"Assumes src and dest Nodes, weight a number.\"\"\"\n",
+    "        super().__init__(src, dest)\n",
+    "        self._weight = weight\n",
+    "\n",
+    "    def get_weight(self):\n",
+    "        \"\"\"Returns weight of the edge.\"\"\"\n",
+    "        return self._weight\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        \"\"\"Textual representation of the edge.\"\"\"\n",
+    "        src, dest = self.get_src(), self.get_dest()\n",
+    "        return f\"{src.get_name()} --({self.get_weight()})--> {dest.get_name()}\"\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        weights_equal = self.get_weight() == other.get_weight()\n",
+    "        return super().__eq__(other) and weights_equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3602e5ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class C:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.x = 1\n",
+    "\n",
+    "    def f(self):\n",
+    "        print(self.x)\n",
+    "\n",
+    "\n",
+    "class B(C):\n",
+    "    def __init__(self):\n",
+    "        self.x = 2\n",
+    "\n",
+    "\n",
+    "B().f()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cf97167",
+   "metadata": {},
+   "source": [
+    "So perhaps the inheritance schema can be as follows:\n",
+    "\n",
+    "- BaseEdge <- BaseWeightedEdge <- WeightedEdge\n",
+    "- ___________________________________<- WeightedDirectionalEdge\n",
+    "- ___________<- Edge\n",
+    "- ___________<- DirectionalEdge\n",
+    "\n",
+    "\n",
+    "BaseEdge would implement \\_\\_str\\_\\_ (with empty separator string), and attributes node1 and node2, BaseWeightedEdge would implement get_weight and perhaps \\_\\_eq\\_\\_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea3c0db4",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
